# nuscenes_frame_io

./: .gitignore  README.md  plot_lidar_bev.py  plot_lidar_bev_with_gt.py  project_lidar_to_cam.py  pyproject.toml  requirements.txt  sanityCheck.py
examples/: plot_lidar_bev.py  plot_lidar_bev_with_gt.py  project_lidar_to_cam.py  sanityCheck.py
src/nuscenes_frame_io/: frame_io.py  transforms.py
